Printing HTML file to PDF takes a long time and produces many blank pages
Categories
(Core :: Printing: Output, defect, P2)
Tracking
()
People
(Reporter: justin1018, Assigned: MatsPalmgren_bugz)
References
(Regression)
Details
(Keywords: regression, testcase)
Attachments
(3 files)
|
418.35 KB,
text/html
|
Details | |
|
384 bytes,
text/html
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release-
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:86.0) Gecko/20100101 Firefox/86.0
Steps to reproduce:
Windows 10 (latest version)
Firefox (86.0)
- Open HTML file I converted from jupyter notebook (.ipynb) file.
- Click 3 bar menu at top right corner and go to <Print>
- The print preview takes about 3-4 minutes to load and when it does it shows 14,000 blank pages. The HTML file should only be about 4-5 pages.
- All PDF options have same output (Save as PDF, Microsoft Print to PDF etc).
I have installed and updated Firefox, jupyter notebook to latest versions. I have concluded that this problem is not on my end with the HTML file and is on Firefox's end because I was able to reproduce it on another laptop running Windows 10 as well. Also, opening up the file in Google Chrome works with no problems.
Actual results:
The print preview takes about 3-4 minutes to load and when it does it shows 14,000 blank pages. The HTML file should only be about 4-5 pages. The preview still has the correct file at the top of the document so I can change the number of pages I want to print (which also takes 3-4 min to load).
Sometimes (rarer) the HTML file will load instantly, but there would only be 1 page (when there should be multiple). Most of the text would be cutoff at the bottom of the page
Expected results:
The print preview should take about 2 seconds to load and display an amount of pages, usually below 10 pages.
Comment 1•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 2•5 years ago
|
||
Yeah, this looks borked. Thanks for the test-case! This looks pretty fast in older versions of Firefox, so it seems a regression.
Updated•5 years ago
|
Comment 3•5 years ago
|
||
[Tracking Requested - why for this release]: Pretty bad printing perf regression.
Mats, can you take a look? Please return the ni? if not and I can take a look, thank you!
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Comment 5•5 years ago
|
||
Oops, I missed a !GetPrevInFlow() condition when replacing NS_CSS_FRAME_TYPE_ABSOLUTE here:
https://phabricator.services.mozilla.com/D101551#C3496350NL2049
because the original code sets it to NS_CSS_FRAME_TYPE_BLOCK when there's a prev-in-flow:
https://phabricator.services.mozilla.com/D101551#C3496350OL778
| Assignee | ||
Comment 6•5 years ago
|
||
| Assignee | ||
Comment 7•5 years ago
|
||
| Assignee | ||
Comment 10•5 years ago
|
||
Comment on attachment 9210562 [details]
Bug 1699605 - Add missing !GetPrevInFlow() check. r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: Many extra blank pages when printing some documents containing overflowing abs.pos. elements.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's a one-liner to restore old behavior.
- String changes made/needed:
Comment 11•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Comment on attachment 9210562 [details]
Bug 1699605 - Add missing !GetPrevInFlow() check. r=emilio
It's too late for 87.0; presumably not a release blocker since 86 is also affected, but will keep on the radar for a dot release.
Comment 14•5 years ago
|
||
Comment on attachment 9210562 [details]
Bug 1699605 - Add missing !GetPrevInFlow() check. r=emilio
88 is in RC now and there are no plans for an 87 dot release.
Updated•5 years ago
|
Description
•