Bug 1699605 - Add missing !GetPrevInFlow() check.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D109220